pkg/controller/testdata/link/expected.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    acorn.io/managed: "true"
  name: linked-hostname
  namespace: test
spec:
  hosts:
    - linked-hostname
  http:
    - route:
        - destination:
            host: other-app-container.other-app-namespace.svc.cluster.local
            port:
              number: 8080
